full responsive sand.html + modificaciones en sandwich.html

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,6 +70,106 @@
             }
         }
     }
+    .main-sand{
+        section{
+            .div-1{
+                width: 77%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 10.625rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.8125rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: 1rem;
+                        font-size: 1.5625rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-2{
+                width: 77%;
+                height: 13.125rem;
+                img{
+                    width: 26%;
+                    height: 10.625rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 2.25rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.5625rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-3{
+                width: 77%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 10.625rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.8125rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: 1rem;
+                        font-size: 1.5625rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-4{
+                width: 77%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 10.625rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 2.25rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: 1rem;
+                        font-size: 1.5625rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        padding-top: .625rem;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width:768px) {
@@ -131,6 +231,110 @@
                 }
                 div {
                     margin-left: 6.25rem;
+                }
+            }
+        }
+    }
+    .main-sand{
+        section{
+            .div-1{
+                width: 77%;
+                height: 11.25rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.75rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+            .div-2{
+                width: 77%;
+                height: 11.25rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.75rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-3{
+                width: 77%;
+                height: 11.25rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.75rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-4{
+                width: 77%;
+                height: 11.25rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.75rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: 1rem;
+                    }
                 }
             }
         }
@@ -203,6 +407,110 @@
             }
         }
     }
+    .main-sand{
+        section{
+            .div-1{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.5625rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+            .div-2{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.5625rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+            .div-3{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.5625rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-4{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.5625rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width:480px) {
@@ -210,6 +518,110 @@
         .div-h1 {
             h1 {
                 padding-top: .5rem;
+            }
+        }
+    }
+    .main-sand{
+        section{
+            .div-1{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h1{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.4375rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.4375rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+            .div-2{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.4375rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.4375rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+            .div-3{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.4375rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.4375rem;
+                        padding-top: 1rem;
+                    }
+                }
+            }
+            .div-4{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    width: 26%;
+                    height: 8.75rem;
+                }
+                div{
+                    h2{
+                        font-family: 'Hind Madurai', sans-serif;
+                        font-weight: 500;
+                        font-size: 1.4375rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: .625rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.4375rem;
+                        padding-top: .625rem;
+                    }
+                }
             }
         }
     }
@@ -269,6 +681,109 @@
                 }
                 div {
                     margin-left: 6.25rem;
+                }
+            }
+        }
+    }
+    .main-sand{
+        section{
+            gap: 1.5625rem;
+            .div-1{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    margin-left: .25rem;
+                    width: 30%;
+                    height: 7.5rem;
+                }
+                div{
+                    h1{
+                        font-weight: 700;
+                        font-size: 1.4375rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: 1.875rem;
+                        font-size: 1.25rem;
+                        font-weight: 700;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: 1.5rem;
+                    }
+                }
+            }
+            .div-2{
+                width: 90%;
+                height: 13.4375rem;
+                img{
+                    margin-left: .25rem;
+                    width: 30%;
+                    height: 7.5rem;
+                }
+                div{
+                    h2{
+                        font-weight: 600;
+                        font-size: 1.4375rem;
+                    }
+                    p{
+                        padding-top: .3125rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.4375rem;
+                        padding-top: .625rem;
+                    }
+                }
+            }
+            .div-3{
+                width: 90%;
+                height: 12.5rem;
+                img{
+                    margin-left: .25rem;
+                    width: 30%;
+                    height: 7.5rem;
+                }
+                div{
+                    h2{
+                        font-weight: 700;
+                        font-size: 1.4375rem;
+                        padding-top: .3125rem;
+                    }
+                    p{
+                        padding-top: 1.875rem;
+                        font-size: 1.25rem;
+                        font-weight: 700;
+                    }
+                    h3{
+                        font-size: 1.5625rem;
+                        padding-top: 1.5rem;
+                    }
+                }
+            }
+            .div-4{
+                width: 90%;
+                height: 13.4375rem;
+                img{
+                    margin-left: .25rem;
+                    width: 30%;
+                    height: 7.5rem;
+                }
+                div{
+                    h2{
+                        font-weight: 600;
+                        font-size: 1.4375rem;
+                    }
+                    p{
+                        padding-top: .3125rem;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                    }
+                    h3{
+                        font-size: 1.4375rem;
+                        padding-top: .625rem;
+                    }
                 }
             }
         }
