--- a/scss/layout/_main-sandwiches.scss
+++ b/scss/layout/_main-sandwiches.scss
@@ -10,16 +10,16 @@
         .div-1{
             border-radius: .375rem;
             background-color: white;
-            width: 60%;
-            height: 10.9375rem;
+            width: 70%;
+            height: 12.5rem;
             display: flex;
             flex-direction: row;
             img{
-                width: 36%;
-                height: 8.75rem;
+                width: 26%;
+                height: 10.9375rem;
                 align-self: center;
                 margin-left: 1.1875rem;
-                border-radius: 5px;
+                border-radius: .3125rem;
             }
             div{
                 width: 100%;
@@ -31,7 +31,7 @@
                     padding-top: .3125rem;
                 }
                 p{
-                    padding-top: .4375rem;
+                    padding-top: 1rem;
                     font-size: 1.5625rem;
                     font-weight: bold;
                 }
@@ -43,16 +43,16 @@
         .div-2{
             border-radius: .375rem;
             background-color: white;
-            width: 60%;
-            height: 10.9375rem;
+            width: 70%;
+            height: 11.875rem;
             display: flex;
             flex-direction: row;
             img{
                 width: 26.400%;
-                height: 8.75rem;
+                height: 10.9375rem;
                 align-self: center;
                 margin-left: 1.1875rem;
-                border-radius: 5px;
+                border-radius: .3125rem;
             }
             div{
                 width: 100%;
@@ -60,32 +60,32 @@
                 h2{
                     font-family: 'Hind Madurai', sans-serif;
                     font-weight: 500;
-                    font-size: 1.875rem;
+                    font-size: 1.6875rem;
                     padding-top: .3125rem;
                 }
                 p{
-                    padding-top: .4375rem;
+                    padding-top: .3125rem;
                     font-size: 1.5625rem;
                     font-weight: bold;
                 }
                 h3{
-                    padding-top: 1rem;
+                    padding-top: .3125rem;
                 }
             }
         }
         .div-3{
             border-radius: .375rem;
             background-color: white;
-            width: 60%;
-            height: 10.9375rem;
+            width: 70%;
+            height: 11.875rem;
             display: flex;
             flex-direction: row;
             img{
                 width: 26.400%;
-                height: 8.75rem;
+                height: 10.9375rem;
                 align-self: center;
                 margin-left: 1.1875rem;
-                border-radius: 5px;
+                border-radius: .3125rem;
             }
             div{
                 width: 100%;
@@ -109,17 +109,17 @@
         .div-4{
             border-radius: .375rem;
             background-color: white;
-            width: 60%;
-            height: 10.9375rem;
+            width: 70%;
+            height: 11.875rem;
             display: flex;
             flex-direction: row;
             margin-bottom: 3.125rem;
             img{
-                width: 38%;
-                height: 8.75rem;
+                width: 26%;
+                height: 10.9375rem;
                 align-self: center;
                 margin-left: 1.1875rem;
-                border-radius: 5px;
+                border-radius: .3125rem;
             }
             div{
                 width: 100%;
@@ -127,7 +127,7 @@
                 h2{
                     font-family: 'Hind Madurai', sans-serif;
                     font-weight: 500;
-                    font-size: 1.875rem;
+                    font-size: 1.6875rem;
                     padding-top: .3125rem;
                 }
                 p{
@@ -136,7 +136,7 @@
                     font-weight: bold;
                 }
                 h3{
-                    padding-top: 1rem;
+                    padding-top: .3125rem;
                 }
             }
         }
