responsive, papafritras.html + tortillas.html + lomitos.hmtl

--- a/scss/layout/_main-papas.scss
+++ b/scss/layout/_main-papas.scss
@@ -10,7 +10,7 @@
             border-radius: .375rem;
             background-color: white;
             width: 60%;
-            height: 10.9375rem;
+            height: 11.875rem;
             display: flex;
             flex-direction: row;
             img{
@@ -43,7 +43,7 @@
             border-radius: .375rem;
             background-color: white;
             width: 60%;
-            height: 10.9375rem;
+            height: 11.875rem;
             display: flex;
             flex-direction: row;
             img{
@@ -68,7 +68,7 @@
                     font-weight: bold;
                 }
                 h3{
-                    padding-top: 1rem;
+                    padding-top: .1875rem;
                 }
             }
         }
@@ -76,7 +76,7 @@
             border-radius: .375rem;
             background-color: white;
             width: 60%;
-            height: 10.9375rem;
+            height: 11.875rem;
             display: flex;
             flex-direction: row;
             margin-bottom: 3.125rem;
