--- a/scss/layout/_media379.scss
+++ b/scss/layout/_media379.scss
@@ -5,6 +5,7 @@
             .card-1 {
                 height: 90%;
                 img {
+                    margin-left: 1.625rem;
                     width: 15.625rem;
                     height: 12.5rem;
                 }
@@ -18,6 +19,7 @@
             .card-2 {
                 height: 90%;
                 img {
+                    margin-left: 1.625rem;
                     width: 15.625rem;
                     height: 12.5rem;
                 }
@@ -31,6 +33,7 @@
             .card-3 {
                 height: 90%;
                 img {
+                    margin-left: 1.625rem;
                     width: 15.625rem;
                     height: 12.5rem;
                 }
@@ -44,6 +47,7 @@
             .card-4 {
                 height: 90%;
                 img {
+                    margin-left: 1.625rem;
                     width: 15.625rem;
                     height: 12.5rem;
                 }
