--- a/css/style.css
+++ b/css/style.css
@@ -2377,5 +2377,21 @@ header .navbar-brand:hover {
     padding-top: 0.625rem;
   }
 }
+footer {
+  background-color: #0E6AF4;
+}
+footer div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.625rem;
+}
+footer div a {
+  color: white;
+  text-decoration: none;
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 1.4375rem;
+  font-weight: 600;
+}
 
 /*# sourceMappingURL=style.css.map */
